# angkorim

./: .gitignore  Cargo.toml  README.md  README_en.md  build.rs  config-node1.yaml  config.yaml  config.yaml.example  config.yml  docker-compose.yml  dockercompose.yml  dockerfile  go.mod  go.sum  main.go  readme.md
cli/: Cargo.toml  build.rs
cli/src/: main.rs
client/quickstart/: .firebaserc  pubspec.yaml
client/quickstart/.firebase/: hosting.YnVpbGQ.cache
client/quickstart/web/: angkorim.pb.dart  angkorim.pbenum.dart  index.html  main.dart  styles.css
client/test/: pubspec.yaml
cmd/: cmd.go
config/: config_example.yml
examples/: cli_client.rs
internal/core/: client.go  hub.go  router.go  server.go  wsCodec.go
internal/core/cluster/: crdt.go  node.go  node_manager.go  node_rpc.go
internal/log/: log.go
internal/model/: base.go  device.go  room.go  user.go  user_room.go
internal/server/: client.go  hub.go  router.go  server.go
internal/server/middleware/: core.go
internal/store/: store.go
loadtest/: tsung.xml
pkg/log/: log.go
pkg/proto/: angkorim.proto  build.sh
pkg/protocol/: angkorim.pb.go  angkorim_grpc.pb.go
proto/: message.proto  protocol.proto
src/: auth.rs  config.rs  main.rs
src/map/: mod.rs
src/network/: discovery.rs  discovery_server.rs  message_cache.rs  mod.rs  protocol.rs  sync_manager.rs  tcp.rs  version.rs
src/storage/: memory.rs  mod.rs  sqlite.rs  user.rs
src/storage/sqlite/migrations/: 20240305_add_message_status.sql  20240320000000_create_users.sql  20250000000000_messages.sql
src/utils/: message_byte.rs  mod.rs
src/websocket/: group.rs  handle.rs  mod.rs
