[package]
name = "angkorim"
version = "0.1.0"
authors = ["Sovathana Phat <sovathana.phat@gmail.com>"]
description = "Distributed chat application"
license = "GPL-3.0"
repository = "https://github.com/sophatvathana/angkorim"
readme = "README.md"
keywords = ["distributed", "chat", "application"]
categories = ["distributed", "chat", "application"]
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "postgres",
    "migrate"
] }

aws-sdk-dynamodb = "1.3"
prost = "0.13.5"
futures = "0.3"
tokio-tungstenite = "0.26.2"
rand = "0.7.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0.139"
uuid = { version = "1.14.0", features = ["v4"] }
chrono = "0.4"
async-trait = "0.1"
bytes = "1.10.0"
url = "2.4.1"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
base64 = "0.22.1"
sha2 = "0.10.8"
rand_core = "0.6.4"
colored = "3.0.0"

[dev-dependencies]
tokio-test = "0.4.4"

[build-dependencies]
prost-build = "0.13.5"

[workspace.metadata.sqlx]
version = "0.8.3"
features = ["sqlite"]
