[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
tui = { version = "0.19", default-features = false, features = ['crossterm'] }
crossterm = "0.26"
prost = "0.11"
tonic = "0.9"
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rpassword = "7.2"
dirs = "5.0"
uuid = { version = "1.3", features = ["v4"] }
tokio-tungstenite = "0.20"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand = "0.8"

[build-dependencies]
tonic-build = "0.9"
prost-build = "0.11"
